--- a/cart.css
+++ b/cart.css
@@ -1,4 +1,3 @@
-/* (A) ENTIRE PAGE */
 h1.h1-logo {
   font-family: Arial, Helvetica, sans-serif
 }
@@ -19,7 +18,6 @@ input.cart, button.cart {
   cursor: pointer;
 }
 
-/* (B) PRODUCTS LIST */
 #cart-products {
   display: grid;
   grid-template-columns: auto auto;
@@ -49,11 +47,11 @@ input.cart, button.cart {
   margin: 10px 0;
   
 }
-input.p-add { 
+input.p-add {
+
   width: 80%;
 }
 
-/* (D) CURRENT SHOPPING CART */
 #cart-items {
   padding: 10px;
   background: #f1f1f1;
@@ -78,7 +76,13 @@ input.c-empty, input.c-checkout {
   margin-top: 10px;
 }
 
-/* (E) RESPONSIVE */
+.footer{
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #1B29E2;
+  color: white;
+  text-align: center;
+}
+
 @media screen AND (max-width: 768px) {
   #cart-wrap { grid-template-columns: 60% 40%; }
   #cart-products { grid-template-columns: auto; }
